[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luse"
version = "1.0.0"
description = "Utilities for dataset handling and rationale selector models."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "datasets",
    "dora-search",
    "transformers",
    "sentence-transformers",
    "prettytable",
    "tqdm",
    "conllu",
]
